# morfeusz-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
builder/: Cargo.toml
builder/src/: lib.rs
capi/: Cargo.toml
capi/include/: morfeusz2.h  morfeusz2_c.h
capi/src/: lib.rs
capi/tests/: c_link_smoke.rs  default_dictionary.rs  header_contract.rs  real_sgjp.rs
cli/: Cargo.toml
cli/src/: lib.rs
cli/tests/: cli_smoke.rs
morfeusz-rs/: Cargo.toml
morfeusz-rs/src/: case_tables.rs  charset.rs  config.rs  dictionary.rs  engine.rs  error.rs  id_resolver.rs  lib.rs  morfeusz.rs  ports.rs  repository.rs  types.rs
morfeusz-rs/src/adapters/: binary.rs  mod.rs  tsv.rs
morfeusz-rs/tests/: basic_parity.rs  binary_fixture.rs  builder_source.rs  core_api.rs  cpp_golden.rs  cpp_parity.rs  engine_api.rs  fixture_parity.rs  full_sgjp_parity.rs
morfeusz-rs/tests/diff_corpus/: analyze_diff.py  bench.py  compare_all.py  corpora_diff.sh  download_corpora.py  full_compare.py  gen_case_tables.py  gen_golden.py  pgo_build.sh  py_binding_harness.py  py_parallel_check.py  run_diff.sh  sweep.py  sweep_deep.py
morfeusz-rs/tests/fixtures/binary/: README.md  test-additional-atomic-s.dict  test-dict-copyright-a.dict  test-dict-copyright-simple-a.dict  test-dict-copyright-v1-a.dict  test-digits-a.dict  test-digits-roman-a.dict  test-digits-s.dict  test-digits-simple-s.dict  test-digits-v1-s.dict  test-inflection-graph-numbers-a.dict  test-mixed-case-a.dict  test-multisegments-a.dict  test-names-a.dict  test-names-s.dict  test-prefixes-uppercase-beginning-a.dict  test-prefixes-uppercase-middle-a.dict  test-qualifiers-a.dict  test-qualifiers-s.dict  test-segtypes-a.dict  test-segtypes-homonyms-a.dict  test-segtypes-s.dict  test-whitespace-append-a.dict
morfeusz-rs/tests/parity/: manifest.tsv
morfeusz-rs/tests/parity/test-digits/: append.expected  continuous.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-digits-roman/: append.expected  continuous.expected  ignore.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-inflection-graph-numbers/: append.expected  continuous.expected  default.expected  input.txt  keep.expected
morfeusz-rs/tests/parity/test-mixed-case/: append.expected  continuous.expected  default.expected  ignore.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-multisegments/: append.expected  continuous.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-names/: append.expected  continuous.expected  ignore.expected  input.txt  keep.expected
morfeusz-rs/tests/parity/test-prefixes-uppercase-beginning/: append.expected  continuous.expected  default.expected  ignore.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-prefixes-uppercase-middle/: append.expected  continuous.expected  ignore.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-qualifiers/: append.expected  continuous.expected  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-segtypes/: append.expected  continuous.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-segtypes-homonyms/: append.expected  continuous.expected  input.txt  keep.expected  strict.expected
morfeusz-rs/tests/parity/test-whitespace-append/: append.expected  continuous.expected  default.expected  input.txt  keep.expected
python/: Cargo.toml  README.md  build.rs  pyproject.toml
python/src/: lib.rs
python/tests/: test_python_parity.py  test_real_sgjp.py
service/: Cargo.toml
service/src/: main.rs
service/tests/: real_sgjp.rs
tests/analyzer/test_copyright/: output.txt
