[package]
name = "morfeusz-capi"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "morfeusz2"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
morfeusz-rs = { path = "../morfeusz-rs" }
