[package]
name = "morfeusz-service"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Binary-only fast allocator (the core library stays dependency free).
mimalloc = { version = "0.1.52", default-features = false }
morfeusz-rs = { path = "../morfeusz-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
